# egscribe

./: Cargo.toml  LICENSE  README.md
fonts/icomoon/: demo.html  selection.json  style.css
fonts/icomoon/fonts/: icomoon.eot
release/note/: 2025-02-04.md  2025-02-06.md  config.json  daily.md  help.md  read.md  untitled_2.md
src/: find.rs  main.rs  mem.rs  space.rs  toolbar.rs
src/medit/: cmd.rs  ctx.rs  cursor.rs  icon.rs  image.rs  items.rs  layout.rs  md.rs  mod.rs  pgh.rs  text.rs  undo.rs
src/sitter/: mod.rs
